# RstyCash

./: .gitignore  Cargo.toml  sqlite.db  styles.css
src/: app.rs  common.rs  main.rs  mods.rs  server.rs  sycamore.rs
src-tauri/: .gitignore  Cargo.toml  Configs.json  Productos.json  Proveedores.json  sqlite.db  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/migrations/: 20240521152804_clientes.sql  20240521153429_codigos.sql  20240521154636_productos.sql  20240521212131_deudas.sql  20240521234346_ventas.sql
src-tauri/src/mods/: caja.rs  cliente.rs  cmd.rs  config.rs  error.rs  lib.rs  mod.rs  pago.rs  pesable.rs  producto.rs  proveedor.rs  rubro.rs  sistema.rs  user.rs  valuable.rs  venta.rs  windows.rs
src-tauri/src/mods/db/: manage.rs  models.rs
src/client/: app.rs  menu.rs  mods.rs
src/client/mods/: login.rs
src/client/mods/main_window/: busqueda.rs  cuadro_principal.rs  cuadro_venta.rs  main_page.rs  main_section.rs  pago.rs  pagos.rs  producto.rs  productos.rs  resumen_pago.rs  select_clientes.rs
src/client/mods/structs/: args.rs  caja.rs  pago.rs  pesable.rs  producto.rs  proveedor.rs  rubro.rs  valuable.rs  venta.rs  windows.rs
src/common/: app_error.rs
src/mods/: lib.rs  login.rs  main_window.rs  structs.rs
src/mods/main_window/: busqueda.rs  cuadro_principal.rs  cuadro_venta.rs  main_page.rs  main_section.rs  pago.rs  pagos.rs  producto.rs  productos.rs  resumen_pago.rs  select_clientes.rs
src/mods/structs/: args.rs  caja.rs  cliente.rs  config.rs  enums.rs  medio_pago.rs  pago.rs  pesable.rs  producto.rs  proveedor.rs  rcs.rs  rubro.rs  sistema.rs  user.rs  valuable.rs  venta.rs  windows.rs
src/server/: db.rs  handlers.rs
src/sycamore/: app.rs  menu.rs  mods.rs
src/sycamore/mods/: lib.rs  login.rs  main_window.rs  structs.rs
src/sycamore/mods/main_window/: busqueda.rs  cuadro_principal.rs  cuadro_venta.rs  main_page.rs  main_section.rs  pago.rs  pagos.rs  producto.rs  productos.rs  resumen_pago.rs  select_clientes.rs
src/sycamore/mods/structs/: cliente.rs  enums.rs  medio_pago.rs  producto.rs
