[package]
name = "sycamorecash"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
sqlx = { version= "0.8.2", features = ["sqlite", "runtime-tokio", "tls-rustls", "sqlx-macros", "chrono"] }
chrono = {version= "0.4.38" ,features = ["serde"] }
thiserror = "1.0.64"
rand = "0.8.5"
serde_json = "1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
ssr = []
